Fixed fonts for display on Safari

--- a/index.css
+++ b/index.css
@@ -9,6 +9,8 @@ body {
     color: var(--main-text-color);
     background-size: cover;
     font-family: 'Roboto', sans-serif;
+    font-weight: 100;
+    font-style:italic;
     font-size: 16px;
 }
 
@@ -23,6 +25,8 @@ div {
     vertical-align: middle;
     justify-content: center;
     display: flex;
+    font-weight: 100;
+    font-style:italic;
     align-items: center;
     margin: 5px 0px 0px 0px;
 }
